# TF2S3-migration

./: .env.example  .gitignore  LICENSE  ORG_CONFIGURATION.md  PRODUCTION_IMPROVEMENTS.md  README.md  S3_migration.py  SECURITY_CONFIG.md  SECURITY_SUMMARY.md  USAGE.md  pyproject.toml  requirements.txt  setup_organization.ps1  setup_organization.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pii-scan.yml  security.yml
docs/: COST_SAVINGS.md  MIGRATION_GUIDE.md
migrationlib/: __init__.py  config.py  gh_ops.py  state_ops.py  tf_ops.py  utils.py  validation.py
scripts/: pii_scanner.py
tests/: test_config.py  test_utils.py  test_validation.py
